[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/images/ui/medal_single.png" type="Texture" id=1]
[ext_resource path="res://assets/font/Overpass-Bold_14.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/font/Overpass-Regular_12.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/scripts/AchievementPopup.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "show_medal"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Fill/Medal:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="AchievementPopup" type="Control"]
anchor_right = 1.0
margin_bottom = 64.0
rect_min_size = Vector2( 250, 64 )
script = ExtResource( 4 )

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 3.6
one_shot = true
autostart = true

[node name="Border" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0.4, 0.346667, 0.08, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fill" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -1.99997
margin_bottom = -2.0
rect_min_size = Vector2( 150, 0 )
mouse_filter = 1
color = Color( 0.156863, 0.156863, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Fill"]
anchor_right = 0.834
margin_left = 6.0
margin_right = 0.171967
margin_bottom = 20.0
custom_fonts/font = ExtResource( 2 )
text = "Lorem ipsum dolor sit amet"
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="Fill"]
anchor_top = 0.5
anchor_right = 0.83
anchor_bottom = 0.5
margin_left = 6.0
margin_top = -10.0
margin_right = 0.0399475
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
mouse_filter = 1
custom_fonts/font = ExtResource( 3 )
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Medal" type="TextureRect" parent="Fill"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.005
anchor_top = 0.516667
anchor_right = 1.005
anchor_bottom = 0.517
margin_left = -56.06
margin_top = -25.0
margin_right = -6.06003
margin_bottom = 24.98
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 1 )
anims/fade_out = SubResource( 2 )
anims/show_medal = SubResource( 3 )
[connection signal="tree_entered" from="." to="." method="_on_AchievementPopup_tree_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
